style added to about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <style>
+        body{
+            background-color: bisque;
+            margin: 0;
+            padding: 0;
+        }
+        h2,a{
+            border: 1px solid black;
+            border-radius: 10px;
+            border-style: dashed;
+        }
+    </style>
     
 </head>
 <body>
